enum-ptr-tests/tests/fail/map_lifetime.stderr
error: lifetime may not live long enough
  --> tests/fail/map_lifetime.rs:15:34
   |
14 |     foo.map_ref(|f| match f {
   |                  -- return type of closure is &'2 &i32
   |                  |
   |                  has type `&'1 Foo<'_, '_>`
15 |         Foo::A(r) | Foo::B(r) => r,
   |                                  ^ returning this value requires that `'1` must outlive `'2`

error: lifetime may not live long enough
  --> tests/fail/map_lifetime.rs:18:34
   |
17 |     foo.map_mut(|f| match f {
   |                  -- return type of closure is &'2 mut &i32
   |                  |
   |                  has type `&'1 mut Foo<'_, '_>`
18 |         Foo::A(r) | Foo::B(r) => r,
   |                                  ^ returning this value requires that `'1` must outlive `'2`
